candidates update
