# docs/swagger.yaml
@@ -1,18 +1,9 @@
 basePath: /
 definitions:
-  data.AuthRequest:
-    properties:
-      password:
-        type: string
-      username:
-        type: string
-    type: object
-  data.Candidate:
+  candidate_data.Candidate:
     properties:
       age:
         type: integer
-      createdAt:
-        type: string
       education:
         type: string
       id:
@@ -26,11 +17,39 @@ definitions:
       region:
         type: string
       type:
-        type: string
-      updatedAt:
-        type: string
+        $ref: '#/definitions/candidate_data.CandidateType'
       votes:
         type: integer
+      votingDeadline:
+        type: string
+    type: object
+  candidate_data.CandidateType:
+    enum:
+    - presidential
+    - deputy
+    - manager
+    type: string
+    x-enum-varnames:
+    - Presidential
+    - Deputy
+    - Manager
+  candidate_data.VoteRequest:
+    properties:
+      candidate_id:
+        type: integer
+      candidate_type:
+        enum:
+        - presidential
+        - deputy
+        - manager
+        type: string
+    type: object
+  data.AuthRequest:
+    properties:
+      password:
+        type: string
+      username:
+        type: string
     type: object
   data.GeneralNews:
     properties:
@@ -45,13 +64,6 @@ definitions:
       title:
         type: string
       updatedAt:
-        type: string
-    type: object
-  data.VoteRequest:
-    properties:
-      candidate_id:
-        type: integer
-      candidate_type:
         type: string
     type: object
   petition_data.Petition:
@@ -114,7 +126,7 @@ paths:
           description: List of candidates
           schema:
             items:
-              $ref: '#/definitions/data.Candidate'
+              $ref: '#/definitions/candidate_data.Candidate'
             type: array
         "400":
           description: Bad Request
@@ -270,10 +282,10 @@ paths:
       parameters:
       - description: Candidate petition_data data
         in: body
-        name: petition_data
+        name: candidate_data
         required: true
         schema:
-          $ref: '#/definitions/data.VoteRequest'
+          $ref: '#/definitions/candidate_data.VoteRequest'
       produces:
       - application/json
       responses:
@@ -293,7 +305,7 @@ paths:
       - BearerAuth: []
       summary: Vote for a candidate
       tags:
-      - Vote
+      - Candidates
 securityDefinitions:
   BearerAuth:
     in: header
