# internals/data/candidate_data/candidate_type.go
@@ -1,0 +1,18 @@
+package candidate_data
+
+type CandidateType string
+
+const (
+	Presidential CandidateType = "presidential"
+	Deputy       CandidateType = "deputy"
+	Manager      CandidateType = "manager"
+)
+
+func IsValidCandidateType(t string) bool {
+	switch CandidateType(t) {
+	case Presidential, Deputy, Manager:
+		return true
+	default:
+		return false
+	}
+}
